<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2013-2016 Chaosdorf e.V.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>

    <!-- General -->
    <string name="app_name">meteroid</string>
    <string name="error_user_not_found">Error while fetching user data:</string>

    <!-- Set hostname -->
    <string name="set_hostname_label">Hostname</string>
    <string name="set_hostname_default_hostname">https://mete.chaosdorf.space/api/v1</string>
    <string name="set_hostname">Please enter the URL of mete</string>
    <string name="set_hostname_hint">URL of mete</string>
    <string name="set_hostname_empty">Please enter a hostname</string>
    <string name="set_hostname_invalid">Invalid hostname entered</string>
    <string name="set_hostname_continue_http">The URL you entered is not secure (HTTP instead of HTTPS). Do you really want to continue?</string>

    <!-- Pick username -->
    <string name="pick_username_label">Pick your username</string>
    <string name="pick_username_new_user">New user</string>
    <string name="pick_username_error">Could not load user list. Please check network connection or reset hostname to proceed.</string>
    <string name="pick_username_show_audits">Show audits</string>

    <!-- User settings -->
    <string name="user_settings_label">Add or edit user</string>
    <string name="user_settings_username">Username</string>
    <string name="user_settings_email">Email</string>
    <string name="user_settings_balance">Balance</string>
    <string name="user_settings_active">Active?</string>
    <string name="user_settings_audit">Log transactions?</string>
    <string name="user_settings_redirect">Redirect after a transaction?</string>
    <string name="user_settings_empty_username">Please enter a username</string>
    <string name="user_settings_balance_no_double">Please enter a number as a balance</string>
    <string name="user_settings_cant_delete_non_existing_user">Can\'t delete a not yet existing user.</string>
    <string name="user_settings_confirm_delete_user">Delete this user?</string>
    <string name="user_settings_deleted_user">Deleted the user.</string>
    <string name="user_settings_failed_fetch_details">Failed to fetch user details.</string>

    <!-- Buy drink -->
    <string name="buy_drink_label">Donate for a drink</string>
    <string name="buy_drink_pending">Please wait for current transaction…</string>
    <string name="buy_drink_bought_drink">Donated %2$s for %1$s</string>
    <string name="buy_drink_added_money">Successfully added %1$s</string>
    <string name="buy_drink_error">Well, this didn\'t succeed. Please check your inputs and network connection and try again or reset hostname/username to proceed.</string>
    <string name="buy_drink_edit_user">Edit user</string>
    <string name="buy_drink_show_audits">Show logs</string>
    <string name="buy_drink_invalid_intent">This action is invalid.</string>
    <string name="buy_drink_no_barcode_scanner">You have no supported barcode scanner installed. It needs to reply to com.google.zxing.client.android.SCAN.</string>
    <string name="buy_drink_wrapped_text">Your %s wrapped is available.</string>
    <string name="buy_drink_wrapped_button">See what you\'ve been up to</string>

    <!-- About -->
    <string name="about_label">About</string>

    <!-- Audits -->
    <string name="audits_label">Audits</string>
    <string name="audits_error">Failed to fetch audits. Please check your network connection and try again or reset hostname/username to proceed.</string>
    <string name="audits_deposits">Sum of all deposits made:</string>
    <string name="audits_payments">Sum of all payments made:</string>
    <string name="audits_sum">Sum of all transactions:</string>
    <string name="audits_no_audits">No audits found for the selected period or for this user. Please make sure to enable logging in your account settings.</string>
    <string name="audits_from">From:</string>
    <string name="audits_until">Until:</string>
    <string name="audits_date_text">Showing audits from %1$s until %2$s.</string>
    <string name="audits_modify_date">Change period</string>

    <!-- Wrapped -->
    <string name="wrapped_label">Wrapped</string>

    <!-- Buttons -->
    <string name="button_back">Back</string>
    <string name="button_reload">Reload</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_barcode">Scan a barcode</string>

    <!-- Menues -->
    <string name="menu_edit_hostname">Edit hostname</string>
    <string name="menu_reset_username">Reset username</string>
    <string name="menu_multi_user_mode">Multi-user mode</string>
    <string name="menu_multi_user_mode_enabled">Multi-user mode enabled</string>
    <string name="menu_multi_user_mode_disabled">Multi-user mode disabled</string>
    <string name="menu_use_grid_view">Use grid view</string>
    <string name="menu_use_grid_view_enabled">Grid view enabled</string>
    <string name="menu_use_grid_view_disabled">Grid view disabled</string>
    
    <!-- Shortcuts -->
    <string name="shortcut_scan">Barcode</string>

</resources>
