<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2013-2016 Chaosdorf e.V.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  >
  
  <data>
    <variable
      name="user"
      type="de.chaosdorf.meteroid.model.User"
    />
    <variable
      name="DECIMAL_FORMAT"
      type="java.text.DecimalFormat"
    />
    <variable
      name="writable"
      type="androidx.databinding.ObservableBoolean"
    />
  </data>
  
  <RelativeLayout android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="?attr/actionBarSize"
                android:paddingRight="?attr/actionBarSize"
                android:paddingTop="?attr/actionBarSize"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".UserSettings">
    <LinearLayout android:orientation="vertical"
                  android:paddingLeft="@dimen/activity_horizontal_margin_dialog"
                  android:paddingRight="@dimen/activity_horizontal_margin_dialog"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent">
      
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/user_settings_username"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/username"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:inputType="text"
              android:text="@={user.name}"
              android:autofillHints="username"
              android:enabled="@{writable}"
              />
      
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:hint="@string/user_settings_email"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
      
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/email"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:inputType="textEmailAddress"
              android:text="@={user.email}"
              android:autofillHints="emailAddress"
              android:enabled="@{writable}"
              />
      
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:hint="@string/user_settings_balance"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/balance"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:inputType="numberDecimal"
              android:text="@{DECIMAL_FORMAT.format(user.balance)}"
              android:enabled="@{writable}"
              />
      
      </com.google.android.material.textfield.TextInputLayout>
          
      <CheckBox
          android:id="@+id/active"
          android:text="@string/user_settings_active"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:layout_marginTop="8dp"
          android:checked="@={user.active}"
          android:enabled="@{writable}"
          />
          
      <CheckBox
          android:id="@+id/audit"
          android:text="@string/user_settings_audit"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:checked="@={user.audit}"
          android:enabled="@{writable}"
          />
          
      <CheckBox
          android:id="@+id/redirect"
          android:text="@string/user_settings_redirect"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:checked="@={user.redirect}"
          android:enabled="@{writable}"
          />
      
    </LinearLayout>

    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:orientation="horizontal"
      android:layout_alignParentBottom="true"
      >

      <Button
          android:id="@+id/button_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_back"
          android:layout_gravity="left"
          android:layout_weight="1"
          android:enabled="@{writable}"
          style="@style/Widget.MaterialComponents.Button.TextButton"/>
      
      <Button
          android:id="@+id/button_delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_delete"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:enabled="@{writable}"
          style="@style/Widget.MaterialComponents.Button.TextButton"/>
      
      <Button
          android:id="@+id/button_save"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_save"
          android:layout_gravity="right"
          android:layout_weight="1"
          android:enabled="@{writable}"/>

    </LinearLayout>

  </RelativeLayout>
</layout>
