<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".BuyDrink">

    <!-- Display user data -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/username"
                android:layout_width="200dp"
                android:paddingLeft="9dip"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/balance"
                android:layout_width="200dp"
                android:paddingLeft="9dip"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:src="@drawable/button_back"
            android:contentDescription="@string/button_back"/>

        <ImageButton
            android:id="@+id/button_reload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:src="@drawable/button_reload"
            android:contentDescription="@string/button_reload"/>

    </LinearLayout>

    <TextView
        android:id="@+id/buy_drink_error"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/buy_drink_error"/>

    <!-- Display drinks -->
    <GridView
        android:id="@+id/grid_view"
        android:visibility="gone"
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnWidth="100dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="15dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center"/>

    <ListView
        android:id="@+id/list_view"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawSelectorOnTop="false"/>

</LinearLayout>
