<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2013-2016 Chaosdorf e.V.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  >

  <data>
    <variable
      name="writable"
      type="androidx.databinding.ObservableBoolean"
    />
  </data>

  <RelativeLayout android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin_dialog"
                android:paddingRight="@dimen/activity_horizontal_margin_dialog"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".SetHostname">
    
    <LinearLayout android:orientation="vertical"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent">

      <TextView
          android:id="@+id/text"
          android:text="@string/set_hostname"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"/>
      
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/set_hostname_hint"
          android:layout_marginTop="10dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

          <com.google.android.material.textfield.TextInputEditText
              android:inputType="textUri"
              android:enabled="@{writable}"
              android:id="@+id/hostname"
              android:text="@string/set_hostname_default_hostname"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>
      
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/button_save"
          android:enabled="@{writable}"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_save"
          android:layout_marginTop="10dp"
          android:layout_gravity="right"/>
    
    </LinearLayout>

  </RelativeLayout>
</layout>
